# OpenBalancer

./: .gitignore  API_KEY_AUTHENTICATION.md  DASHBOARD_SETUP.md  EXTERNAL_IP_CHANGES.md  IMPLEMENTATION_SUMMARY.md  NETWORK_SETUP.md  QUICK_START.txt  README.md  SETUP_SUMMARY.md  check-ip.sh  openbalancer-dev.conf  openbalancer.crt  openbalancer.key  pyproject.toml  requirements.txt  start-api.sh  start-dashboard.sh  start.sh
.data/: openbalancer.db
clients/: README.md  benchmark_result.json  benchmark_runner.py  config.py  litellm_test.py  load_test.py  main.py  openai_test.py  requests_test.py
dashboard/: README.md  __init__.py  app.py  pages.py  state.py
favicon_io/: site.webmanifest
openbalancer/: __init__.py  __main__.py  app.py  models.py  router.py  settings.py  user_router.py
openbalancer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openbalancer/.data/: openbalancer.db
openbalancer/auth/: __init__.py  bootstrap.py  db.py  exceptions.py  keygen.py  middleware.py  user_auth.py
openbalancer/providers/: __init__.py  base.py  gemini.py  openai_compatible.py
openbalancer/routers/: __init__.py  dashboard.py  user_auth.py
openbalancer/static/: dashboard.css
openbalancer/templates/: base.html  dashboard.html  login.html
openbalancer/web/: routes.py
tests/: test_app_routes.py  test_gemini_adapter.py  test_model_profiles.py  test_router_limiter.py  test_routing_policies.py  test_settings.py
