[project]
name = "openbalancer"
version = "0.1.0"
description = "Open-source LLM routing and load-balancing MVP."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic[email]>=2.7.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "reflex>=0.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["openbalancer*"]
